cli/tests/testdata/npm/types_ambient_module/main_import_map.out
error: TS2551 [ERROR]: Property 'Test2' does not exist on type 'typeof import("@denotest/types-ambient")'. Did you mean 'Test'?
console.log(mod.Test2); // should error
                ~~~~~
    at file:///[WILDCARD]/main_import_map.ts:4:17

    'Test' is declared here.
      class Test {
            ~~~~
        at file:///[WILDCARD]/@denotest/types-ambient/1.0.0/index.d.ts:7:9
